--- a/src/lite-dailymotion-embed.css
+++ b/src/lite-dailymotion-embed.css
@@ -17,6 +17,7 @@
   border-radius: var(--border-radius);
   overflow: hidden;
   cursor: pointer;
+  /* eslint-disable-next-line css/use-baseline */
   user-select: none;
   line-height: 0; /* Prevents layout shift */
 }
@@ -64,6 +65,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  /* eslint-disable-next-line css/use-baseline */
   outline: none;
 }
 
@@ -73,6 +75,7 @@
 }
 
 .lite-dailymotion-embed__play-button:focus {
+  /* eslint-disable-next-line css/use-baseline */
   outline: 2px solid #fff;
   outline-offset: 4px;
 }
@@ -200,6 +203,7 @@
 /* High Contrast Mode Support */
 @media (prefers-contrast: high) {
   .lite-dailymotion-embed__play-button:focus {
+    /* eslint-disable-next-line css/use-baseline */
     outline: 3px solid;
     outline-offset: 2px;
   }
@@ -215,8 +219,11 @@
   .lite-dailymotion-embed *,
   .lite-dailymotion-embed *::before,
   .lite-dailymotion-embed *::after {
+    /* eslint-disable-next-line css/no-important */
     animation-duration: 0.01ms !important;
+    /* eslint-disable-next-line css/no-important */
     animation-iteration-count: 1 !important;
+    /* eslint-disable-next-line css/no-important */
     transition-duration: 0.01ms !important;
   }
 
@@ -241,6 +248,7 @@
 
 /* Focus Management */
 .lite-dailymotion-embed:focus-within {
+  /* eslint-disable-next-line css/use-baseline */
   outline: 2px solid #ff6900;
   outline-offset: 2px;
 }
