--- a/src/lite-dailymotion-embed.css
+++ b/src/lite-dailymotion-embed.css
@@ -68,6 +68,7 @@
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  /* eslint-disable-next-line css/use-baseline */
   line-clamp: 2;
   -webkit-box-orient: vertical;
 }
